Cập nhật layout màn hình chính,thêm tiến độ học tập , thêm sa hình,fix lỗi lặp lại câu hỏi

--- a/app/src/main/res/drawable/border_item_1.xml
+++ b/app/src/main/res/drawable/border_item_1.xml
@@ -9,5 +9,5 @@
         android:left="10dp"
         android:right="10dp"
         android:top="10dp" />
-    <solid android:color="#3AE83E"/>
+    <solid android:color="#7BE67E"/>
 </shape>
