--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,7 +13,7 @@
     <color name="grey_light">#F5F5F5</color>
     <color name="gray">#575454</color>
 <!--    sửa màu ở đây-->
-    <color name="primary">#53E878</color>
+    <color name="primary">#BB86FC</color>
     <color name="red">#CA0A0A</color>
     <color name="orange">#FF9800</color>
     <color name="green_leaf">#4CAF50</color>
