--- a/app/src/main/res/drawable/border_item_4.xml
+++ b/app/src/main/res/drawable/border_item_4.xml
@@ -9,5 +9,5 @@
         android:left="10dp"
         android:right="10dp"
         android:top="10dp" />
-    <solid android:color="#CA5AF9"/>
+    <solid android:color="#E19AFF"/>
 </shape>
