--- a/app/src/main/res/drawable/border_item_5.xml
+++ b/app/src/main/res/drawable/border_item_5.xml
@@ -9,5 +9,5 @@
         android:left="10dp"
         android:right="10dp"
         android:top="10dp" />
-    <solid android:color="#4EA8F9"/>
+    <solid android:color="#9ECDF8"/>
 </shape>
