--- a/app/src/main/res/drawable/border_item_6.xml
+++ b/app/src/main/res/drawable/border_item_6.xml
@@ -9,5 +9,5 @@
         android:left="10dp"
         android:right="10dp"
         android:top="10dp" />
-    <solid android:color="#F78131"/>
+    <solid android:color="#FBBB90"/>
 </shape>
