--- a/app/src/main/res/layout/information_lesson_bottom_sheet.xml
+++ b/app/src/main/res/layout/information_lesson_bottom_sheet.xml
@@ -77,7 +77,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="30"
-                android:textColor="@color/primary"
+                android:textColor="@color/purple_200"
                 android:textSize="24sp" />
 
             <TextView
@@ -86,7 +86,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="27"
-                android:textColor="@color/green_leaf"
+                android:textColor="@color/purple_500"
                 android:textSize="24sp" />
 
             <TextView
@@ -110,7 +110,7 @@
         android:gravity="center"
         android:text="@string/text_start_exam"
         android:textAllCaps="true"
-        android:textColor="#10ac84"
+        android:textColor="#3C0B87"
         android:textSize="18sp"
         android:textStyle="bold" />
 </LinearLayout>
