--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,5 @@
     <color name="green_leaf">#4CAF50</color>
     <color name="transparent">#00000000</color>
     <color name="yellow_light">#F8EFBA</color>
+    <color name="grey_300">#E0E0E0</color>
 </resources>
