--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <item name="design_bottom_sheet" type="id" />
+    <item name="skeleton_container" type="id" />
+    <item name="content_root" type="id" />
 </resources>
