fix layout for loadding

--- a/app/src/main/res/layout/activity_test_license.xml
+++ b/app/src/main/res/layout/activity_test_license.xml
@@ -11,9 +11,36 @@
     <!-- Container skeleton (overlay) -->
     <FrameLayout
         android:id="@+id/skeleton_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone" />
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="10dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <!-- Item skeleton 1~6 -->
+                <include layout="@layout/item_skeleton_exam" />
+                <include layout="@layout/item_skeleton_exam" />
+                <include layout="@layout/item_skeleton_exam" />
+                <include layout="@layout/item_skeleton_exam" />
+                <include layout="@layout/item_skeleton_exam" />
+                <include layout="@layout/item_skeleton_exam" />
+
+            </LinearLayout>
+        </ScrollView>
+
+    </FrameLayout>
 
     <!-- Nội dung thực của activity -->
     <LinearLayout
