--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,5 @@
     <color name="transparent">#00000000</color>
     <color name="yellow_light">#F8EFBA</color>
     <color name="grey_300">#E0E0E0</color>
+    <color name="grey_400">#BDBDBD</color>
 </resources>
