--- a/app/src/main/res/layout/information_lesson_bottom_sheet.xml
+++ b/app/src/main/res/layout/information_lesson_bottom_sheet.xml
@@ -85,7 +85,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="19"
+                android:text="21"
                 android:textColor="@color/purple_500"
                 android:textSize="24sp" />
 
@@ -94,7 +94,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="@string/text_20_minutes"
+                android:text="19 phút"
                 android:textColor="@color/orange"
                 android:textSize="24sp" />
         </LinearLayout>
