--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!-- Style hiện có -->
     <style name="dialog_transparent_width" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowIsFloating">true</item>
         <item name="android:windowIsTranslucent">false</item>
@@ -23,6 +24,59 @@
 
     <style name="ShapeBottomSheet" parent="Widget.Design.BottomSheet.Modal">
         <item name="android:background">@drawable/bg_round_white_top_bottom</item>
+    </style>
+
+    <!-- THÊM CÁC STYLE MỚI CHO TIME PICKER -->
+
+    <!-- Style cho TimePicker Material -->
+    <style name="CustomTimePickerStyle" parent="@style/Theme.MaterialComponents.Light.Dialog">
+        <item name="colorPrimary">#4285F4</item>
+        <item name="colorPrimaryVariant">#3367D6</item>
+        <item name="colorOnPrimary">@android:color/white</item>
+        <item name="colorSecondary">#34A853</item>
+        <item name="colorSecondaryVariant">#2E8B57</item>
+        <item name="colorOnSecondary">@android:color/white</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:backgroundDimAmount">0.4</item>
+    </style>
+
+    <!-- Style cho TimePickerDialog cũ (nếu dùng TimePickerDialog thường) -->
+    <style name="TimePickerDialogTheme" parent="Theme.AppCompat.Light.Dialog">
+        <item name="colorAccent">#4285F4</item>
+        <item name="android:textColorPrimary">#212121</item>
+        <item name="android:textColorSecondary">#757575</item>
+        <item name="android:background">#FFFFFF</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:backgroundDimAmount">0.4</item>
+    </style>
+
+    <style name="TimePickerDialogCustom" parent="@style/dialog_transparent_width">
+        <item name="colorAccent">#4285F4</item>
+        <item name="android:colorAccent">#4285F4</item>
+    </style>
+
+    <!-- Thêm style animation cho dialog -->
+    <style name="DialogAnimation">
+        <item name="android:windowEnterAnimation">@anim/dialog_slide_up</item>
+        <item name="android:windowExitAnimation">@anim/dialog_slide_down</item>
+    </style>
+
+    <!-- Style mới đẹp hơn cho TimePickerDialog -->
+    <style name="TimePickerDialogBeautiful" parent="@style/Theme.AppCompat.Light.Dialog">
+        <item name="colorAccent">#4285F4</item>
+        <item name="android:colorAccent">#4285F4</item>
+        <item name="android:textColorPrimary">#212121</item>
+        <item name="android:textColorSecondary">#757575</item>
+        <item name="android:background">@drawable/bg_dialog_gradient</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:backgroundDimAmount">0.6</item>
+        <item name="android:windowAnimationStyle">@style/DialogAnimation</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowMinWidthMajor">85%</item>
+        <item name="android:windowMinWidthMinor">85%</item>
     </style>
 
 </resources>
